--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
+    "browser-sync": "^2.11.1",
+    "browser-sync-webpack-plugin": "^1.0.1",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1"
   }
